Fix spacing on apply and don't validate majorMinor

--- a/src/scss/pages/_apply.scss
+++ b/src/scss/pages/_apply.scss
@@ -18,6 +18,10 @@
   button + button {
     margin-left: $spacing-base;
   }
+
+  .reason-for-funding-container {
+    margin-top: $spacing-xl;
+  }
 }
 
 .apply_form {
